--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "vue": "^2.6.14",
-    "vue-cropper": "^0.5.8",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^3.2.1"
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "vue-img-cutter": "^3.0.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
